src_old/objects/Target__c.object
<CustomObject>
    <description>Target defines what a Worker will observe and answer questions about. Targets could include Products, Categories, Displays, or any other type of Target configured for an instance. Target is related to Project Service Target and Retailer.</description>
    <fields>
        <fullName>AccountInfo__c</fullName>
        <label>Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BrandInfo__c</fullName>
        <label>Brand</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CategoryInfo__c</fullName>
        <label>Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DepartmentName__c</fullName>
        <label>Department Name</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartmentNumber__c</fullName>
        <label>Department Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ImageURL__c</fullName>
        <description>Photo of the target</description>
        <inlineHelpText>Photo of the target</inlineHelpText>
        <label>ImageURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OneHubRetailerId__c</fullName>
        <inlineHelpText>Retailer Code will automatically populate when hitting save.</inlineHelpText>
        <label>One Hub Retailer ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneHubTargetID__c</fullName>
        <description>Target ID from Master Data Management System</description>
        <externalId>true</externalId>
        <label>One Hub Master Target ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PLU__c</fullName>
        <label>PLU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PackageSizeQty__c</fullName>
        <label>Yield Per Unit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PackageSizeUnits__c</fullName>
        <label>Package Size (Units)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>count</fullName>
                </value>
                <value>
                    <fullName>lb</fullName>
                </value>
                <value>
                    <fullName>oz</fullName>
                </value>
                <value>
                    <fullName>pint</fullName>
                </value>
                <value>
                    <fullName>gallon</fullName>
                </value>
                <value>
                    <fullName>quart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer</label>
        <referenceTo>Retailer__c</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShelfName__c</fullName>
        <label>Shelf Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StockCode__c</fullName>
        <externalId>true</externalId>
        <label>Stock ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TargetName__c</fullName>
        <label>Target Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetType__c</fullName>
        <label>Target Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>Sam&apos;s Club</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC__c</fullName>
        <label>UPC</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorNumber__c</fullName>
        <label>Vendor Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>OneHubRetailerId__c</columns>
        <columns>AccountInfo__c</columns>
        <columns>BrandInfo__c</columns>
        <columns>CategoryInfo__c</columns>
        <columns>Description__c</columns>
        <columns>StockCode__c</columns>
        <columns>PackageSizeUnits__c</columns>
        <columns>Status__c</columns>
        <columns>TargetName__c</columns>
        <columns>TargetType__c</columns>
        <columns>UPC__c</columns>
        <columns>VendorNumber__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <recordTypes>
        <fullName>Brand</fullName>
        <active>true</active>
        <label>Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>Category</fullName>
        <active>true</active>
        <label>Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>Display</fullName>
        <active>false</active>
        <label>Display</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product</fullName>
        <active>true</active>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>ReportingOnly</fullName>
        <active>true</active>
        <label>Reporting Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sam_s</fullName>
        <active>true</active>
        <description>Sams Club</description>
        <label>Sams Club</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Validate_PLU_or_Item_Number_not_empty</fullName>
        <active>true</active>
        <description>Ensures Item Number or UPC field are populated.</description>
        <errorConditionFormula>AND(
ISBLANK(StockCode__c),
ISBLANK(UPC__c))</errorConditionFormula>
        <errorMessage>To move forward please provide either a Stock Code or a UPC</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_UPC_Length</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(UPC__c) &gt; 0 &amp;&amp; Len(UPC__c)&lt; 12</errorConditionFormula>
        <errorMessage>UPC should be 12 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_package_size_Qty</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(PackageSizeQty__c)</errorConditionFormula>
        <errorMessage>Invalid Package Size Qty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_package_size_Units</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(
   OR(
      ISPICKVAL(PackageSizeUnits__c,&apos;count&apos;),
      ISPICKVAL(PackageSizeUnits__c,&apos;lb&apos;),
      ISPICKVAL(PackageSizeUnits__c,&apos;oz&apos;),
      ISPICKVAL(PackageSizeUnits__c,&apos;pint&apos;),
      ISPICKVAL(PackageSizeUnits__c,&apos;gallon&apos;),
      ISPICKVAL(PackageSizeUnits__c,&apos;quart&apos;)
 )
)</errorConditionFormula>
        <errorMessage>Invalid Package Size Units</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validate_name</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Name)=0</errorConditionFormula>
        <errorMessage>Item Name cannot be empty.</errorMessage>
    </validationRules>
</CustomObject>